--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/trial0_40.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Made by Rolin Blake using create-react-app and Google Firebase" />
+    <meta name="keywords" content="javascript, html, css, react.js, google, firebase, programmer, hire, job" />
+    <meta name="author" content="Rolin Blake" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="rmb-portfolio-react"
-      content="Made by Rolin Blake using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Rolin Blake</title>
